--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/mukeshsoni/react-telephone-input",
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "babel-eslint": "^3.1.17",
     "babel-jest": "18.0.0",
     "babel-preset-es2015": "6.22.0",
